eks-sinatra-app-deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: sinatra-app
 namespace: sinatra-app-ns
spec:
 selector:
    matchLabels:
      app: sinatra-app
 replicas: 2
 strategy:
   rollingUpdate:
     maxSurge: 10%
     maxUnavailable: 10%
   type: RollingUpdate
 template:
   metadata:
     labels:
       app: sinatra-app
   spec:
     containers:
     - image: sbatati/ruby-sinatra-app
       name: sinatra-app
       ports:
       - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sinatra-app
  namespace: sinatra-app-ns
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: sinatra-app
