eks-sinatra-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "sinatra-app-ingress"
  namespace: "sinatra-app-ns"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: sinatra-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "sinatra-app"
              servicePort: 80
